Add User Model & Authentication w/ Devise

--- a/Extended Exercises/bugtracker/app/views/bugs/index.html.erb
+++ b/Extended Exercises/bugtracker/app/views/bugs/index.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Bugs</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
@@ -22,7 +20,7 @@
         <td><%= bug.closed %></td>
         <td><%= link_to 'Show', bug %></td>
         <td><%= link_to 'Edit', edit_bug_path(bug) %></td>
-        <td><%= link_to 'Destroy', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
