--- a/Extended Exercises/bugtracker/app/views/layouts/application.html.erb
+++ b/Extended Exercises/bugtracker/app/views/layouts/application.html.erb
@@ -8,7 +8,17 @@
 </head>
 <body>
 
-<%= yield %>
+  <% flash.each do |type, content| %>
+    <% if content.respond_to?('each')
+      content.each do |item| %>
+        <%= render 'layouts/notification', type: type, content: item %>
+      <% end %>
+    <% else %>
+      <%= render 'layouts/notification', type: type, content: content %>
+    <% end %>
+  <% end %>
+
+  <%= yield %>
 
 </body>
 </html>
