Add Reporter and Assignee to Bug Form & Show View

--- a/Extended Exercises/bugtracker/app/views/bugs/show.html.erb
+++ b/Extended Exercises/bugtracker/app/views/bugs/show.html.erb
@@ -4,6 +4,16 @@
 </p>
 
 <p>
+  <strong>Reporter:</strong>
+  <%= @bug.reporter.email %>
+</p>
+
+<p>
+  <strong>Assignee:</strong>
+  <%= @bug.assignee.email %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @bug.description %>
 </p>
