Fix "Show" View Crash on Unassigned Bugs

--- a/Extended Exercises/bugtracker/app/views/bugs/show.html.erb
+++ b/Extended Exercises/bugtracker/app/views/bugs/show.html.erb
@@ -10,7 +10,7 @@
 
 <p>
   <strong>Assignee:</strong>
-  <%= @bug.assignee.email %>
+  <%= @bug.assignee ? @bug.assignee.email : 'Unassigned' %>
 </p>
 
 <p>
