--- a/Extended Exercises/bugtracker/app/views/bugs/_form.html.erb
+++ b/Extended Exercises/bugtracker/app/views/bugs/_form.html.erb
@@ -11,31 +11,33 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+  <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :reporter_id %><br>
-    <%= f.collection_select :reporter_id, User.all, :id, :email, prompt: false %>
+  <div class="form-group">
+    <%= f.label :reporter_id %>
+    <%= f.collection_select :reporter_id, User.all, :id, :email, {prompt: false}, {class: 'form-control'} %>
   </div>
-  <div class="field">
-    <%= f.label :assignee_id %><br>
-    <%= f.collection_select :assignee_id, User.all, :id, :email, prompt: 'Choose...' %>
+  <div class="form-group">
+    <%= f.label :assignee_id %>
+    <%= f.collection_select :assignee_id, User.all, :id, :email, {prompt: 'Choose...'}, {class: 'form-control'} %>
   </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :tags %><br>
-    <%= f.text_field :tags %>
+  <div class="form-group">
+    <%= f.label :tags %>
+    <%= f.text_field :tags, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :closed %><br>
-    <%= f.check_box :closed %>
+  <div class="checkbox">
+    <label for="bug_closed">
+      <%= f.check_box :closed %>
+      Closed
+    </label>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-success' %>
   </div>
 <% end %>
