--- a/Extended Exercises/bugtracker/app/views/bugs/edit.html.erb
+++ b/Extended Exercises/bugtracker/app/views/bugs/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Bug</h1>
 
-<%= render 'form' %>
+<%= render 'bug_form' %>
 
 <%= link_to 'Show', @bug %> |
 <%= link_to 'Back', bugs_path %>
