--- a/Extended Exercises/bugtracker/app/views/bugs/index.html.erb
+++ b/Extended Exercises/bugtracker/app/views/bugs/index.html.erb
@@ -1,38 +1,38 @@
 <h1>Listing Bugs</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Title</th>
-      <th>Assignee</th>
-      <th>Tags</th>
-      <th>Closed</th>
-      <th>Updated</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @bugs.each do |bug| %>
+<div class="table-responsive">
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= bug.id %></td>
-        <td><%= link_to bug.title, bug %></td>
-        <td class="<%= bug.assignee ? '' : 'bg-warning' %>">
-          <%= bug.assignee ? bug.assignee.email : 'unassigned' %>
-        </td>
-        <td><%= bug.tags %></td>
-        <td class="<%= bug.closed ? 'bg-success' : 'bg-danger' %>">
-          <%= bug.closed %>
-        </td>
-        <td><%= bug.updated_at %></td>
-        <td><%= link_to 'Edit', edit_bug_path(bug), class: 'btn btn-xs btn-default' %></td>
-        <td><%= link_to 'Delete', bug, method: :delete, class: 'btn btn-xs btn-danger', data: { confirm: 'Are you sure?' } %></td>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Assignee</th>
+        <th>Tags</th>
+        <th>Closed</th>
+        <th>Updated</th>
+        <th colspan="2"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @bugs.each do |bug| %>
+        <tr>
+          <td><%= bug.id %></td>
+          <td><%= link_to bug.title, bug %></td>
+          <td class="<%= bug.assignee ? '' : 'bg-warning' %>">
+            <%= bug.assignee ? bug.assignee.email : 'unassigned' %>
+          </td>
+          <td><%= bug.tags %></td>
+          <td class="<%= bug.closed ? 'bg-success' : 'bg-danger' %>">
+            <%= bug.closed %>
+          </td>
+          <td><%= bug.updated_at %></td>
+          <td><%= link_to 'Edit', edit_bug_path(bug), class: 'btn btn-xs btn-default' %></td>
+          <td><%= link_to 'Delete', bug, method: :delete, class: 'btn btn-xs btn-danger', data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <%= link_to 'New Bug', new_bug_path, class: 'btn btn-success' %>
