--- a/Extended Exercises/bugtracker/app/views/bugs/_bug_form.html.erb
+++ b/Extended Exercises/bugtracker/app/views/bugs/_bug_form.html.erb
@@ -38,6 +38,6 @@
     </label>
   </div>
   <div class="actions">
-    <%= f.submit class: 'btn btn-success' %>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
