Handle User Deletion More Gracefully
Associated fields are now nullified, with view and controller changes that avoid exceptions in this case.

--- a/Extended Exercises/bugtracker/app/views/bugs/show.html.erb
+++ b/Extended Exercises/bugtracker/app/views/bugs/show.html.erb
@@ -4,7 +4,11 @@
 
 <dl class="dl-horizontal">
   <dt>Reporter:</dt>
-  <dd><%= @bug.reporter.email %></dd>
+  <dd>
+    <span class="<%= @bug.reporter ? '' : 'bg-warning text-warning' %>">
+      <%= @bug.reporter ? @bug.reporter.email : 'unassigned' %>
+    </span>
+  </dd>
 
   <dt>Assignee:</dt>
   <dd>
