Make Bug Comments Usable
Edits to generated scaffolding for comments to make them actually work.

--- a/Extended Exercises/bugtracker/app/views/bugs/show.html.erb
+++ b/Extended Exercises/bugtracker/app/views/bugs/show.html.erb
@@ -35,3 +35,5 @@
   <%= link_to 'Edit', edit_bug_path(@bug), class: 'btn btn-default' %>
   &nbsp;&nbsp;<%= link_to 'Back', bugs_path %>
 </p>
+
+<%= render 'comments/bug_comments' %>
