--- a/Extended Exercises/bugtracker/app/views/comments/_comment_form.html.erb
+++ b/Extended Exercises/bugtracker/app/views/comments/_comment_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comment) do |f| %>
+<%= form_for([@bug, @comment]) do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :body %><br>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, autofocus: :autofocus %>
   </div>
   <div class="actions">
     <%= f.submit %>
