--- a/Extended Exercises/bugtracker/app/views/comments/edit.html.erb
+++ b/Extended Exercises/bugtracker/app/views/comments/edit.html.erb
@@ -1,6 +1,5 @@
 <h1>Editing Comment</h1>
 
-<%= render 'form' %>
+<%= render 'comment_form' %>
 
-<%= link_to 'Show', @comment %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'Cancel', @bug %>
