--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,8 @@
 
 // @import 'bootstrap-sprockets';
 @import 'bootstrap';
-@import "bootstrap/theme";
+// @import "bootstrap/theme";
+
+.page-header h1 {
+  margin: 0;
+}
