Clean up Flash Notification View Code
Takes logic out of views, puts it into application_helper.rb. 
Include Bootstrap JS to make notification closing work.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,15 +17,8 @@
     </p>
 <% end %>
 
-<% flash.each do |type, content| %>
-  <% if content.respond_to?('each')
-    content.each do |item| %>
-      <%= render 'layouts/notification', type: type, content: item %>
-    <% end %>
-  <% else %>
-    <%= render 'layouts/notification', type: type, content: content %>
-  <% end %>
-<% end %>
+    <%= render_alerts %>
+
 
     <%= yield %>
   </div>
