--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -1,7 +1,18 @@
-<div class="clearfix">
-  <h1 class="pull-left">All Bugs</h1>
-
-  <p class="pull-right"><%= link_to 'New Bug', new_bug_path, class: 'btn btn-success' %></p>
+<div class="page-header">
+  <div class="row">
+    <div class="col-sm-10">
+    <h1>
+      You’ve Got <%=
+        @bugs.length > 0 ? @bugs.length : 'No'
+      %> Bug<%=
+        (@bugs.length == 1 ? '' : 's') + (@bugs.length == 0 ? '!' : '')
+      %>
+    </h1>
+    </div>
+    <div class="col-sm-2">
+      <%= link_to 'Report Bug', new_bug_path, class: 'btn btn-success btn-lg pull-right' %>
+    </div>
+  </div>
 </div>
 
 <div class="table-responsive">
@@ -49,4 +60,4 @@
   </table>
 </div>
 
-<p><%= link_to 'New Bug', new_bug_path, class: 'btn btn-success' %></p>
+<p><%= link_to 'Report Bug', new_bug_path, class: 'btn btn-success' %></p>
