--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -15,6 +15,8 @@
   </div>
 </div>
 
+<% if @bugs.length > 0 %>
+
 <div class="table-responsive">
   <table class="table">
     <thead>
@@ -60,4 +62,16 @@
   </table>
 </div>
 
+<% else %>
+
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h2 class="panel-title">Nothing to See Here</h2>
+  </div>
+  <div class="panel-body">
+    You don’t have any bugs yet. Click a “Report Bug” button to create one.
+  </div>
+</div>
+
+<% end %>
 <p><%= link_to 'Report Bug', new_bug_path, class: 'btn btn-success' %></p>
