--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -46,7 +46,7 @@
           </td>
           <td><%= bug.tags %></td>
           <td class="<%= bug.closed ? 'bg-success' : 'bg-danger' %>">
-            <%= bug.closed ? 'Yes' : 'No' %>
+            <%= tf_to_yn bug.closed %>
           </td>
           <td class="text-nowrap">
             <%= bug.created_at.to_time.strftime('%Y-%m-%d') %>
