--- a/app/views/bugs/show.html.erb
+++ b/app/views/bugs/show.html.erb
@@ -26,7 +26,7 @@
   <dt>Closed:</dt>
   <dd>
     <span class="<%= @bug.closed ? 'bg-success' : 'bg-danger' %>">
-      <%= @bug.closed %>
+      <%= tf_to_yn @bug.closed %>
     </span>
   </dd>
 </dl>
