--- a/app/views/application/_notify_alert.html.erb
+++ b/app/views/application/_notify_alert.html.erb
@@ -1,4 +1,5 @@
-<div class="alert <%= bootstrap_class_for(type) %><%= closeable ? ' alert-dismissible' : '' %>" role="alert">
+<div class="alert <%= type %><%= closeable ? ' alert-dismissible' : '' %>" role="alert">
+
 <% if closeable %>
   <button type="button" class="close" data-dismiss="alert">
     <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
@@ -6,4 +7,5 @@
 <% end %>
 
   <%= content %>
+
 </div>
