--- a/app/views/bugs/_bug_form.html.erb
+++ b/app/views/bugs/_bug_form.html.erb
@@ -1,4 +1,7 @@
 <%= form_for(@bug) do |f| %>
+
+  <%= hidden_field :bug, :reporter_id %>
+
   <% if @bug.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@bug.errors.count, "error") %> prohibited this bug from being saved:</h2>
@@ -16,8 +19,8 @@
     <%= f.text_field :title, {class: 'form-control', autofocus: 'autofocus'} %>
   </div>
   <div class="form-group">
-    <%= f.label :reporter_id %>
-    <%= f.collection_select :reporter_id, User.all, :id, :email, {prompt: false}, {class: 'form-control'} %>
+    <label for="bug_reporter">Reporter</label>
+    <p class="form-control-static" id="bug_reporter"><%= @bug.reporter.email %></p>
   </div>
   <div class="form-group">
     <%= f.label :assignee_id %>
