--- a/app/views/bugs/_bug_form.html.erb
+++ b/app/views/bugs/_bug_form.html.erb
@@ -24,7 +24,7 @@
   </div>
   <div class="form-group">
     <%= f.label :assignee_id %>
-    <%= f.collection_select :assignee_id, User.all, :id, :email, {prompt: 'Choose...'}, {class: 'form-control'} %>
+    <%= f.collection_select :assignee_id, User.all, :id, :email, {include_blank: 'Unassigned'}, {class: 'form-control'} %>
   </div>
   <div class="form-group">
     <%= f.label :description %>
