--- a/app/views/comments/_bug_comments.html.erb
+++ b/app/views/comments/_bug_comments.html.erb
@@ -10,7 +10,7 @@
 
   <% @bug.comments.each do |comment| %>
 
-  <h3>#<%= comment.id %> by <%= comment.author.email %></h3>
+  <h3>#<%= comment.id %> by <%= comment.author %></h3>
 
   <div>
     <p>
